[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Inimigos/Goblin/Run.png" type="Texture" id=1]
[ext_resource path="res://Assets/Inimigos/Goblin/Attack3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Inimigos/Goblin/Take Hit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Inimigos/Goblin/Death.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=5]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/blood-splash.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/goblin-morte.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Inimigos/Goblin/Attack.png" type="Texture" id=8]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/knife-slice1.wav" type="AudioStream" id=9]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.0497925, 0.456432, 0.838174 )
colors = PoolColorArray( 0.616699, 0, 0, 1, 0.777989, 0.191419, 0.19802, 1, 1, 0.407843, 0.458824, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -300.0
scale = 2.0
scale_curve = SubResource( 22 )
color_ramp = SubResource( 21 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 17.5 )

[sub_resource type="Animation" id=4]
resource_name = "Atacar"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_atirar_bomba"
}, {
"args": [  ],
"method": "terminou_atirar"
}, {
"args": [  ],
"method": "correr"
} ]
}

[sub_resource type="Animation" id=18]
resource_name = "Atacar2"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "fim_do_hit"
}, {
"args": [  ],
"method": "correr"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Som_ataque")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.117361,
"start_offset": 0.01,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.32 )
}

[sub_resource type="Animation" id=2]
resource_name = "Correr"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Dano"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Morte"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19, 19 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 60.5005, 14.3842 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 56.5, 26 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 59.5, 28 )

[node name="Goblin" type="KinematicBody2D" groups=["inimigos"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -21, -23 )
rotation = -3.14159
emitting = false
amount = 12
lifetime = 0.5
explosiveness = 0.8
randomness = 0.1
process_material = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -17.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Correr"
anims/Atacar = SubResource( 4 )
anims/Atacar2 = SubResource( 18 )
anims/Correr = SubResource( 2 )
anims/Dano = SubResource( 5 )
anims/Morte = SubResource( 6 )
anims/RESET = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 20, -21 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 25.9846, -0.211288 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="Hurtbox" type="Area2D" parent="." groups=["inimigos"]]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.258824, 0.968627, 0, 1 )
position = Vector2( -1, -19 )
shape = SubResource( 7 )

[node name="Detector_jogador_bomba" type="Area2D" parent="."]
position = Vector2( -1, 0 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_jogador_bomba"]
modulate = Color( 0.00392157, 0.0666667, 1, 1 )
position = Vector2( 168.501, -20.3842 )
shape = SubResource( 8 )

[node name="Detector_jogador_ataque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_jogador_ataque"]
modulate = Color( 0.556863, 0.0666667, 0.0666667, 1 )
position = Vector2( 38.5, -32 )
shape = SubResource( 19 )

[node name="Detector_ataque" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_ataque"]
position = Vector2( 41.5, -34 )
shape = SubResource( 20 )

[node name="Vida" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -41.0
margin_right = 14.0
margin_bottom = -37.0
color = Color( 0, 0, 0, 0.509804 )

[node name="Barra" type="ColorRect" parent="Vida"]
margin_left = 1.0
margin_top = 1.0
margin_right = 29.0
margin_bottom = 3.0
color = Color( 0.0470588, 0.509804, 0.109804, 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 41.4214, -21.6659 )

[node name="Som_dano" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Som_morte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Som_ataque" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="mudar_status_goblin" from="." to="." method="_on_Goblin_mudar_status_goblin"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Detector_jogador_bomba" to="." method="_on_Detector_jogador_bomba_body_entered"]
[connection signal="body_entered" from="Detector_jogador_ataque" to="." method="_on_Detector_jogador_ataque_body_entered"]
[connection signal="body_entered" from="Detector_ataque" to="." method="_on_Detector_ataque_body_entered"]
